--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 anyio==3.6.1
 autopep8==1.7.0
+bcrypt==4.0.0
 certifi==2022.9.14
 charset-normalizer==2.1.1
 click==8.1.3
@@ -14,8 +15,10 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 orjson==3.8.0
+passlib==1.7.4
 pycodestyle==2.9.1
 pydantic==1.10.2
+PyJWT==2.5.0
 pymongo==4.2.0
 python-dotenv==0.21.0
 python-multipart==0.0.5
