--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,17 @@
     "@types/node": "^16.11.57",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "3d-react-carousal": "^5.0.0",
     "bootstrap": "^5.2.1",
     "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-card-carousel": "^1.1.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.0",
+    "react-icons": "^4.4.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.8.2",
