--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,6 @@
     "react-icons": "^4.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
     "react-select": "^5.4.0",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4",
@@ -57,5 +56,8 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
+  }
 }
