--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.4.0",
+    "slug": "^8.2.2",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
