--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/titillium-web": "^4.5.9",
     "@hookform/resolvers": "^2.9.8",
     "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,7 +15,9 @@
     "@types/react-dom": "^18.0.6",
     "3d-react-carousal": "^5.0.0",
     "bootstrap": "^5.2.1",
+    "date-fns": "^2.29.3",
     "mdb-react-ui-kit": "^4.2.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-card-carousel": "^1.1.3",
@@ -25,7 +28,9 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.4.0",
+    "react-webcam": "^7.0.1",
     "reactstrap": "^9.1.5",
+    "recharts": "^2.1.16",
     "slug": "^8.2.2",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4",
