--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.6",
     "3d-react-carousal": "^5.0.0",
     "bootstrap": "^5.2.1",
+    "buffer": "^5.7.1",
     "date-fns": "^2.29.3",
     "mdb-react-ui-kit": "^4.2.0",
     "moment": "^2.29.4",
